--- a/Musicfyy2.html
+++ b/Musicfyy2.html
@@ -31,7 +31,7 @@
             <p>Already have an account? <a href="index.html">Sign In Here</a></p>
         </div>
         <div class="image-section">
-            <img src="Musicfyy4.jpg" alt="Hii ">
+            <img src="dekhi.jpg" alt="Patandar! ">
         </div>
     </main>
     <footer>
