--- a/Musicfyy3.html
+++ b/Musicfyy3.html
@@ -6,7 +6,7 @@
     <title>Musicfyy</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body background="bg1.jpg">
     <header>
         <h1>Musicfyy!</h1>
     </header>
