--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sign Up / Sign In</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body background="bg1.jpg">
     <header>
         <h1>Musicfyy</h1>
     </header>
